--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.5.14",
     "@ant-design/colors": "^3.1.0",
+    "@nivo/bar": "^0.59.2",
     "antd": "^3.22.0",
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.5.0",
