--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
+    "react-grid-system": "^5.0.2",
     "react-scripts": "3.1.1"
   },
   "scripts": {
