--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "localhost:8000",
+  "proxy": "http://localhost:8000",
   "browserslist": {
     "production": [
       ">0.2%",
