--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ant-design/colors": "^3.1.0",
     "@nivo/bar": "^0.59.2",
     "antd": "^3.22.0",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.5.0",
     "less": "^3.10.3",
